pv-pvc/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ktor-sample-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ktor-sample-pod
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: ktor-sample-pod
    spec:
#      initContainers:
#        - image: busybox
#          name: fix-permissions
#          command: ["sh", "-c", "chmod 777 /data"]
#          volumeMounts:
#            - name: data
#              mountPath: /data
      containers:
        - image: ktor-sample:1.0
          name: ktor-sample
          ports:
            - containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: my-claim
