pv-pvc/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ktor-sample-service
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: ktor-sample-pod
  type: NodePort
