pv-pvc/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ktor-sample-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: ktor-sample.info
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: ktor-sample-service
                port:
                  number: 80
